# PhotoHandleNew

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/keys/: xiaobai_release.keystore
app/src/androidTest/java/com/photo/photohandle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitmap-util.cpp  bitmap-util.h  common.h  equalscaleimg.cpp  equalscaleimg.h  findcorners.cpp  findcorners.h  javaCallbackHelper.cpp  javaCallbackHelper.h  log.cpp  log.h  native-lib.cpp  photoHandler.cpp  photoHandler.h  undistortimg.cpp  undistortimg.h  vinmeasure.cpp  vinmeasure.h
app/src/main/java/com/photo/photohandle/: FirstActivity.kt  MainActivity.kt
app/src/main/java/com/photo/photohandle/app/: BaseApplication.kt
app/src/main/java/com/photo/photohandle/bean/: HandleResult.kt  SupportSize.kt
app/src/main/java/com/photo/photohandle/camera/: DeviceConfig.kt
app/src/main/java/com/photo/photohandle/extension/: Activitys.kt
app/src/main/java/com/photo/photohandle/utils/: JniUtil.kt
app/src/main/res/layout/: activity_first.xml  activity_main.xml
app/src/main/res/values/: attr.xml  strings.xml
app/src/test/java/com/photo/photohandle/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
